cmake_minimum_required(VERSION 2.8)
project( trafficeye )
find_package( OpenCV )
include_directories( ${OpenCV_INCLUDE_DIRS} )
include_directories( ${Tesseract_INCLUDE_DIRS} )
add_executable( trafficeye main.cpp )
target_link_libraries( trafficeye ${OpenCV_LIBS} ${Tesseract_LIBRARIES} ${OPENALPR_LIB} /usr/lib/libopenalpr.so )
